--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 	<h1>"The Least Cucked Country in Europe"</h1>
-	<p>Thoughts on Poland</p>
+	<h4>Thoughts on Poland</h4>
 	</body>
 </html>
